--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /AEXBanner/build/
 /AEXBanner/dist/
 /AEXBanner - Push/dist/
+/BankierenNoObserverFX/build/
+/BankierenNoObserverFX/dist/
+/BankierenNoObserverFX/nbproject/private/
